Updated links on index.html for deployment on openshift !!

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,11 +23,11 @@
                         <tbody>
                             <tr>
                                 <td>Registration</td>
-                                <td><a href="/register.html" class="btn btn-warning">GO</a></td>
+                                <td><a href="./register.html" class="btn btn-warning">GO</a></td>
                             </tr>
                             <tr>
                                 <td>Login</td>
-                                <td><a href="/login.html" class="btn btn-warning">GO</a></td>
+                                <td><a href="./login.html" class="btn btn-warning">GO</a></td>
                             </tr>
                         </tbody>
                     </table>
