Modified login.html !!

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -4,6 +4,8 @@
     <title>User Login Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Visit The Security Patching App Login Page">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -67,7 +69,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button id="logsubmit" type="submit" class="btn btn-success">Login</button>
-                <a href="/index.html" class="btn btn-success" style="margin-left: 1%">Back</a>
+                <a href="./index.html" class="btn btn-success" style="margin-left: 1%">Back</a>
             </div>
         </div>
 
