Modified login.html !!

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 
-<form id="login_form" class="container" action="/UserDetailsServlet" method="post">
+<form id="login_form" class="container" action="./UserDetailsServlet" method="post">
     <br/>
     <br/>
     <h2>LOGIN PORTAL FOR USERS</h2>
@@ -68,8 +68,8 @@
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button id="logsubmit" type="submit" class="btn btn-success">Login</button>
-                <a href="./index.html" class="btn btn-success" style="margin-left: 1%">Back</a>
+                <button id="logsubmit" type="submit" class="btn btn-primary">Login</button>
+                <a href="./index.html" class="btn btn-primary" style="margin-left: 1%">Back</a>
             </div>
         </div>
 
