Modified register.html !!

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -151,7 +151,7 @@
     <h2></h2>
     <h3></h3>
     <h4></h4>
-    <button id="back" type="submit" class="btn btn-warning">Back</button>
+    <button id="back" type="submit" class="btn btn-success">Back</button>
 </div>
 
 <script type="text/javascript" src="scripts/usrreg.js"></script>
