Modified index.html !!

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
                     <h3>Master Link Table</h3>
                     <table class="col-sm-8 table table-bordered">
                         <thead>
-                            <tr class="info">
+                            <tr class="success">
                                 <th>Page</th>
                                 <th>Link</th>
                             </tr>
