Modified register.html !!

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -4,7 +4,7 @@
     <title>User Registation Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <meta name="description" content="Visit The Security Patching App Registration Page">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -117,21 +117,21 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="mobno">Mobile Number - </label>
             <div class="col-sm-10">
-                <input type="text" minlength="20" maxlength="20" class="form-control" id="mobno" placeholder="Enter mobile number ...">
+                <input type="text" class="form-control" id="mobno" placeholder="Enter mobile number ...">
             </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-sm-2" for="pwd">Password - </label>
             <div class="col-sm-10">
-                <input type="password" maxlength="20" class="form-control" id="pwd" placeholder="Enter password ...">
+                <input type="password" class="form-control" id="pwd" placeholder="Enter password ...">
             </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-sm-2" for="pwd2">Password again - </label>
             <div class="col-sm-10">
-                <input type="password" maxlength="20" class="form-control" id="pwd2" placeholder="Re-enter password ...">
+                <input type="password" class="form-control" id="pwd2" placeholder="Re-enter password ...">
             </div>
         </div>
 
