Modified register.html !!

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -154,7 +154,7 @@
     <button id="back" type="submit" class="btn btn-success">Back</button>
 </div>
 
-<script type="text/javascript" src="scripts/usrreg.js"></script>
+<script type="text/javascript" src="./scripts/usrreg.js"></script>
 
 </body>
 </html>
