Modified login.html !!

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -78,7 +78,7 @@
 
 <div id="loader"></div>
 
-<script type="text/javascript" src="scripts/usrlogin.js"></script>
+<script type="text/javascript" src="./scripts/usrlogin.js"></script>
 
 </body>
 </html>
