Modified register.html !!

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -93,9 +93,9 @@
             <div class="col-sm-10">
                 <select class="form-control" id="role">
                     <option value="NULL">Select</option>
-                    <option value="DEVELOPER">Developer</option>
+                    <option value="PATCHADMIN">PatchAdmin</option>
                     <option value="MANAGER">Manager</option>
-                    <option value="ADMIN">Admin</option>
+                    <option value="SYSADMIN">SysAdmin</option>
                 </select>
             </div>
         </div>
